Fix popups z-index, added turns to leaderboard, fix some popups overlapping

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ button {
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
     background: rgba(0, 0, 0, 0.6);
+    z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
